# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20260129152301_make_status_not_null_in_subscriptions.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscription.rs
tests/api/: health_check.rs  helpers.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
tests/common/: mod.rs
