[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Lee Sommerfeldt <lee@etlode.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = "0.4.42"
claims = "0.8.0"
config = "0.15.19"
fake = "4.4.0"
http = "1.4.0"
linkify = "0.10.0"
proptest = "1.9.0"
reqwest = { version = "0.13.1", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
unicode-segmentation = "1.12.0"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
wiremock = "0.6.5"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
